# hazelbis

./: .gitignore  CMakeLists.txt  HazelBisConfig.h.in
lib/src/: CMakeLists.txt  Test.cpp  Test.h  hazel.h  hzpch.h
lib/src/design/: singleton.h
lib/src/hazel/: application.cpp  application.h  assert.h  core.h  entrypoint.h  keycodes.h  mousecodes.h  window.h
lib/src/hazel/events/: appevents.h  events.h  keyevents.h  mouseevents.h
lib/src/logger/: logger.h
lib/src/platform/windows/: windowswindow.cpp  windowswindow.h
sandbox/src/: App.cpp  CMakeLists.txt
